[gd_scene load_steps=8 format=2]

[ext_resource path="res://Computer/Decoder.png" type="Texture" id=1]
[ext_resource path="res://Overlap/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Computer/Decoder.gd" type="Script" id=3]
[ext_resource path="res://PlayerDetectionZone.tscn" type="PackedScene" id=4]
[ext_resource path="res://Dialog-System-Example/Dialog_Player.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 20 )

[sub_resource type="CircleShape2D" id=2]
radius = 100.0

[node name="Decoder" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]
collision_layer = 2147483680

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 1 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 4 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
modulate = Color( 1, 1, 1, 0.352941 )
shape = SubResource( 2 )

[node name="Dialog_Player" parent="." instance=ExtResource( 5 )]
position = Vector2( -89, -32 )
z_index = 100

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="Hurtbox"]
[editable path="PlayerDetectionZone"]
